testing a fix for button at forms not showing fully

--- a/client/src/components/SignIn/SignIn.module.css
+++ b/client/src/components/SignIn/SignIn.module.css
@@ -63,10 +63,10 @@
   margin-top: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   width: 95%;
   background-color: #cb3066;
-  height: 20%;
+  height: 8rem;
   border: 2px solid black;
   color: white;
   font-size: 1.2rem;
