--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -50,7 +50,7 @@
 }
 
 .FormGroupsWrapper {
-  margin-top: 3rem;
+  margin-top: 2rem;
   margin-bottom: auto;
   padding: 0 0.5rem;
   text-align: center;
@@ -63,10 +63,10 @@
   margin-top: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   width: 95%;
   background-color: #cb3066;
-  height: 20%;
+  height: 10rem;
   border: 2px solid black;
   color: white;
   font-size: 1.2rem;
